--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Form Validator</title>
 </head>
 <body>
-    <div class="container"></div>
+    <div class="container">
 <form id="form" class="form">
     <h2>Register With Us</h2>
     <div class="form-control">
@@ -33,7 +33,7 @@
     </div>
     <button>Submit</button>
 </form>
-
+</div>
 <script src="script.js"></script>
 </body>
 </html>
